Make update the best

--- a/src/views/competitions/general/description.hbs
+++ b/src/views/competitions/general/description.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="jumbotron m-4 p-0">
+    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
         <div class="container">
             <div class="mt-2">
                 <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
@@ -40,7 +40,7 @@
 
 <div class="container">
     <div class="card m-4">
-        <div class="card-header p-2">
+        <div class="card-header p-2" id="desafiosActivos">
             <h5>General</h5>
         </div>
         <div class="card-body">
@@ -94,16 +94,7 @@
 
 
 <style>
-    .jumbotron {
-        background: #ffffff;
-        border: 1px solid #0886bd;
-    }
-
     #navigation {
         background: #ffff;
-    }
-
-    .card {
-        border: 1px solid #0886bd;
     }
 </style>
