--- a/src/views/competitions/general/evaluation.hbs
+++ b/src/views/competitions/general/evaluation.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="jumbotron m-4 p-0">
+    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
         <div class="container">
             <div class="mt-2">
                 <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
@@ -39,8 +39,8 @@
 </div>
 
 <div class="container">
-    <div class="card m-4">
-        <div class="card-header p-2">
+    <div class="card m-4" id="cardCompetition">
+        <div class="card-header p-2" id="desafiosActivos">
             <h5>General</h5>
         </div>
         <div class="card-body">
@@ -75,16 +75,19 @@
                             Las actividades de cualquier industria que realiza el ser humano generan impactos
                             ambientales en sus zonas de influencia directa, realizando un gran aporte a la problemática
                             ambiental nacional y mundial, conllevado al deterioro de la calidad de vida de las personas.
-                            Esta es una propuesta dirigida al sector minero para el desarrollo de un sistema tecnológico
+                            Esta es una propuesta dirigida al sector minero para
+
+                        </p>
+                        <p id="parrafoCompetition"> el desarrollo de un sistema tecnológico
                             de indicadores de calidad de agua y aire, que en primera instancia le permitirá a la empresa
                             BVN realizar la evaluación de su desempeño ambiental, con el objetivo de apoyar en la toma
                             de decisiones estratégicas, tácticas y operativas, y en segunda medida la aplicación de este
-                            modelo sirva a otras empresas del sector siendo éste último un factor determinante para
+                            modelo sirva a </p>
+                        <p id="parrafoCompetition">otras empresas del sector siendo éste último un factor determinante
+                            para
                             competitividad, puesto que, le permite a las organizaciones detectar los procesos críticos
                             que requieran implementar mejoras operacionales para gestionar adecuadamente sus impactos
-                            ambientales y contribuir al desarrollo sostenible del país dentro del marco normativo.
-
-                        </p>
+                            ambientales y contribuir al desarrollo sostenible del país dentro del marco normativo.</p>
                     </div>
                     <div>
                         <ul>
@@ -108,16 +111,7 @@
 
 
 <style>
-    .jumbotron {
-        background: #ffffff;
-        border: 1px solid #0886bd;
-    }
-
     #navigation {
         background: #ffff;
-    }
-
-    .card {
-        border: 1px solid #0886bd;
     }
 </style>
