--- a/src/views/competitions/information.hbs
+++ b/src/views/competitions/information.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="jumbotron m-4 p-0">
+    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
         <div class="container">
             <div class="mt-2">
                 <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
@@ -39,8 +39,8 @@
 </div>
 
 <div class="container">
-    <div class="card m-4">
-        <div class="card-header p-2">
+    <div class="card m-4" id="cardCompetition">
+        <div class="card-header p-2" id="desafiosActivos">
             <h5>+Información</h5>
         </div>
         <div class="card-body">
@@ -51,7 +51,7 @@
                 investment management, insurance and related fields.</p>
             <p id="parrafoCompetition">Today, Two Sigma manages approximately $38 billion in assets, employs more than
                 1100 people and has offices in New York, Hong Kong, Houston and London. For more information, please
-                visit <a href="www.twosigma.com." target="_blank">www.twosigma.com.</a>
+                visit <a href="https://www.twosigma.com/" target="_blank">www.twosigma.com.</a>
             </p>
         </div>
     </div>
@@ -62,16 +62,9 @@
 
 
 <style>
-    .jumbotron {
-        background: #ffffff;
-        border: 1px solid #0886bd;
-    }
-
+ 
     #navigation {
         background: #ffff;
     }
 
-    .card {
-        border: 1px solid #0886bd;
-    }
 </style>
