--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -15,247 +15,203 @@
 
 <div class="container text-center">
 
-
+  <!--NAVIGATION-->
   <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
     <div class="container m-4">
-      <div id="navigation">
+      <div id="navigation" class="ml-4">
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active" href="/competitions/theme1/general">General</a>
+            <a class="nav-link active" href="#">General</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/competitions/theme1/information">+Información</a>
+            <a class="nav-link" href="#">Premios</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Categorías
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Empresa</a>
+              <a class="dropdown-item" href="#">Estado</a>
+              <a class="dropdown-item" href="#">Comunidad</a>
+              <a class="dropdown-item" href="#">Global</a>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/competitions/theme1/discusion">Discusión</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/competitions/theme1/rules">Reglas</a>
-          </li>
-          <li class="nav-item">
-            <a class="search nav-link" href="/competitions/theme1/rules">Buscar</a>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </form>
           </li>
         </ul>
+        <div id="desafiosActivos">
+          <h4><b>18</b> Desafíos Activos</h4>
+        </div>
       </div>
     </div>
 
     <!--Contenido de Desafíos-->
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+    <div class="container">
 
-      </div>
-      <div class="col-md-3">
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
         <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
           </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
+          </div>
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
+          </div>
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
+          </div>
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
+          </div>
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+                height="64px"></a>
+          </div>
+          <div class="col-md-6">
+            <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a>
+            </h5>
+            <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <div class="col-sm-6 col-md-12 mt-2">
+                $100,230
+              </div>
+              <div class="col-sm-6 col-md-12 mb-2">
+                2,934 equipos
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-      </div>
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
-          </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <style>
+    .jumbotron {
+      background: #1de9b6;
+    }
 
-  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-      </div>
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
-          </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    #desafioContent {
+      background: #ffffff;
+    }
 
-  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-      </div>
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
-          </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    .dropdown-item:hover {
+      background-color: #1de9b6;
+      color: #030303;
+    }
 
-  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-      </div>
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
-          </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
-            height="64px"></a>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
-        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-      </div>
-      <div class="col-md-3">
-        <div class="row">
-          <div class="col-sm-6 col-md-12 mt-2">
-            $100,230
-          </div>
-          <div class="col-sm-6 col-md-12 mb-2">
-            2,934 equipos
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<style>
-  .jumbotron {
-    background: #4ebff0;
-  }
-
-  #desafioContent {
-    background: #ffffff;
-  }
-</style>
-<!--
-  
-<div id="principal" class="jumbotron jumbotron-fluid mt-4">
-  <div class="container text-center">
-    <h3 id="lead1">Desafío nacionales e internacionales</h3>
-    <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
-    <p class="lead">Trabajemos por la <b>EQUIDAD</b> de genéro.</p>
-    <p class="lead">Desarrollemos tecnologías que nos permitan ver más allá.</p>
-    <p class="lead">Hagamos del MUNDO un mejor lugar.</p>
-    <button id="buttonForm" class="btn text-center">Más de un $1 millón dólares en inversiones</button>
-  </div>
-</div>
-
-<h4 id="lead"><i class="fas fa-arrow-right"></i> DESAFÍOS RECIENTES: DISPONIBLE PARA RESOLVERLOS</h4>
-<div class="card-deck">
-  <div id="firstCard" class="card">
-    <img src="https://www.fundacionisys.org/images/IAb.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Comunidad</h5>
-      <p class="card-text">¿Cómo pueden los ciudadanos y las comunidades crear y
-        mejorar la inclusión social y la prosperidad compartida?.
-      </p>
-    </div>
-    <div class="card-footer">
-      <button id="buttonForm" class="btn btn-block">Conocer más <i class="fas fa-external-link-alt"></i></button>
-      <button id="buttonForm2" class="btn btn-block">Subir solución <i class="fas fa-file-upload"></i></button>
-    </div>
-  </div>
-  <div id="secondCard" class="card">
-    <img src="https://www.fundacionisys.org/images/IAb.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Niñez</h5>
-      <p class="card-text">¿Cómo pueden todos los niños menores de cinco años pueden
-        alcanzar su máximo potencial?</p>
-    </div>
-    <div class="card-footer">
-      <button id="buttonForm" class="btn btn-block">Conocer más <i class="fas fa-external-link-alt"></i></button>
-      <button id="buttonForm2" class="btn btn-block">Subir solución <i class="fas fa-file-upload"></i></button>
-    </div>
-  </div>
-  <div id="thirthCard" class="card">
-    <img src="https://www.fundacionisys.org/images/IAb.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Economia Circular</h5>
-      <p class="card-text">¿Cómo pueden las personas crear y consumir bienes que son renovables,
-        reparables, reutilizables y reciclables?</p>
-    </div>
-    <div class="card-footer">
-      <button id="buttonForm" class="btn btn-block">Conocer más <i class="fas fa-external-link-alt"></i></button>
-      <button id="buttonForm2" class="btn btn-block">Subir solución <i class="fas fa-file-upload"></i></button>
-      <small class="text-muted">Last updated 3 mins ago</small>
-
-    </div>
-  </div>
-  <div id="fourthCard" class="card">
-    <img src="https://www.fundacionisys.org/images/IAb.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ciudades Saludables</h5>
-      <p class="card-text">¿Cómo pueden los residentes urbanos diseñar y vivir en entornos que promuevan
-        la salud física y mental?
-      </p>
-    </div>
-    <div class="card-footer">
-      <button id="buttonForm" class="btn btn-block">Conocer más <i class="fas fa-external-link-alt"></i></button>
-      <button id="buttonForm2" class="btn btn-block">Subir solución <i class="fas fa-file-upload"></i></button>
-    </div>
-  </div>
-</div>
-</div>
-
--->
+    
+  </style>
