--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -25,7 +25,7 @@
           <label>Ingresar cuenta</label>
         </div>
         <div id="description_card">
-          <small><span>Si ha olvidado su <a href="#" style="color:#0886bd"><b>Contraseña</b></a></span></small>
+          <small><span>Si ha olvidado su <a href="#" style="color:#00bfa5"><b>Contraseña</b></a></span></small>
         </div>
         <img class="mx-auto d-block logo m-4" src="/img/logoIndex.png" alt="Logo ChallengeX" width="150px" height="auto">
         <div class="card-body">
@@ -111,7 +111,7 @@
 <!-- About -->
 <section class="about" id="about">
   <div class="container text-center">
-    <h2 style="color:#0886bd">
+    <h2 style="color:#00bfa5">
       ChallengeX
     </h2>
 
@@ -149,22 +149,6 @@
   </div>
 </section>
 <!-- /About -->
-<!-- Parallax -->
-
-<!--
-    <div class="block bg-primary block-pd-lg block-bg-overlay text-center" data-bg-img="img/parallax-bg.jpg" data-settings='{"stellar-background-ratio": 0.6}' data-toggle="parallax-bg">
-    <h2>
-        Welcome to a perfect theme
-      </h2>
-
-    <p>
-      This is the most powerful theme with thousands of options that you have never seen before.
-    </p>
-    <img alt="Bell - A perfect theme" class="gadgets-img hidden-md-down" src="img/gadgets.png">
-  </div>
-  -->
-<!-- /Parallax -->
-<!-- Features -->
 
 <section class="features" id="features">
   <div class="container">
@@ -298,198 +282,7 @@
   </div>
 </section>
 <!-- /Features -->
-<!-- Call to Action -->
 
-<!--
-    <section class="cta">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-9 col-sm-12 text-lg-left text-center">
-          <h2>
-              Call to Action Section
-            </h2>
-
-          <p>
-            Lorem ipsum dolor sit amet, nec ad nisl mandamus imperdiet, ut corpora cotidieque cum. Et brute iracundia his, est eu idque dictas gubergren
-          </p>
-        </div>
-
-        <div class="col-lg-3 col-sm-12 text-lg-right text-center">
-          <a class="btn btn-ghost" href="#">Buy This Theme</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
-<!-- /Call to Action -->
-<!-- Portfolio -->
-<!--
-  
-<section class="portfolio" id="portfolio">
-  <div class="container text-center">
-    <h2>
-      Eventos
-    </h2>
-
-    <p>
-      Nuestros eventos más esperados del año se detallan en la siguiente lista. <b>ChallengeX_EVENTS</b>
-    </p>
-  </div>
-
-  <div class="portfolio-grid">
-    <div class="row">
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-1.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-2.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-3.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-4.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-5.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-6.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-7.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-sm-6 col-xs-12">
-        <div class="card card-block">
-          <a href="#"><img alt="" src="img/porf-8.jpg">
-            <div class="portfolio-over">
-              <div>
-                <h3 class="card-title">
-                  The Dude Rockin'
-                </h3>
-
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
--->
-<!-- /Portfolio -->
-
-<!-- Team -->
 
 <section class="team" id="team">
   <div class="container">
