--- a/src/views/competitions/competencia.hbs
+++ b/src/views/competitions/competencia.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="jumbotron m-4 p-0">
+    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
         <div class="container">
             <div class="mt-2">
                 <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
@@ -39,8 +39,8 @@
 </div>
 
 <div class="container">
-    <div class="card m-4">
-        <div class="card-header p-2">
+    <div class="card m-4" id="cardCompetition">
+        <div class="card-header p-2" id="desafiosActivos">
             <h5>General</h5>
         </div>
         <div class="card-body">
@@ -63,29 +63,45 @@
                             <a class="nav-link" href="/competitions/theme1/general/timeline">Cronograma</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/submission">Instrucciones de envío</a>
+                            <a class="nav-link" href="/competitions/theme1/general/submission">Instrucciones de
+                                envío</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-9">
 
                     <div class="text-justify">
-                        <p id="parrafoCompetition">Can we use the content of news analytics to predict stock price performance? The ubiquity of data today enables investors at any scale to make better investment decisions. The challenge is ingesting and interpreting the data to determine which data is useful, finding the signal in this sea of information. Two Sigma is passionate about this challenge and is excited to share it with the Kaggle community.</p>
+                        <p id="parrafoCompetition">Can we use the content of news analytics to predict stock price
+                            performance? The ubiquity of data today enables investors at any scale to make better
+                            investment decisions. The challenge is ingesting and interpreting the data to determine
+                            which data is useful, finding the signal in this sea of information. Two Sigma is passionate
+                            about this challenge and is excited to share it with the Kaggle community.</p>
                         <div class="text-center">
                             <img src="/img/empresas/thumb76_76.png" alt="Imgen Empresa" class="rounded" width="200px">
                         </div>
-                        <p id="parrafoCompetition">As a scientifically driven investment manager, Two Sigma has been applying technology and data science to financial forecasts for over 17 years. Their pioneering advances in big data, AI, and machine learning have pushed the investment industry forward. Now, they're eager to engage with Kagglers in this continuing pursuit of innovation.</p>
-                        <p id="parrafoCompetition">By analyzing news data to predict stock prices, Kagglers have a unique opportunity to advance the state of research in understanding the predictive power of the news. This power, if harnessed, could help predict financial outcomes and generate significant economic impact all over the world.</p>
+                        <p id="parrafoCompetition">As a scientifically driven investment manager, Two Sigma has been
+                            applying technology and data science to financial forecasts for over 17 years. Their
+                            pioneering advances in big data, AI, and machine learning have pushed the investment
+                            industry forward. Now, they're eager to engage with Kagglers in this continuing pursuit of
+                            innovation.</p>
+                        <p id="parrafoCompetition">By analyzing news data to predict stock prices, Kagglers have a
+                            unique opportunity to advance the state of research in understanding the predictive power of
+                            the news. This power, if harnessed, could help predict financial outcomes and generate
+                            significant economic impact all over the world.</p>
                         <p id="parrafoCompetition">Data for this competition comes from the following sources:</p>
                     </div>
                     <div>
                         <ul>
                             <li>Market data provided by Intrinio.</li>
-                            <li>News data provided by Thomson Reuters. Copyright Thomson Reuters, 2017. All Rights Reserved. Use, duplication, or sale of this service, or data contained herein, except as described in the Competition Rules, is strictly prohibited.</li>
+                            <li>News data provided by Thomson Reuters. Copyright Thomson Reuters, 2017. All Rights
+                                Reserved. Use, duplication, or sale of this service, or data contained herein, except as
+                                described in the Competition Rules, is strictly prohibited.</li>
                         </ul>
-                        <i>The THOMSON REUTERS Kinesis Logo and THOMSON REUTERS are trademarks of Thomson Reuters and its affiliated companies in the United States and other countries and used herein under license.</i>
+                        <i>The THOMSON REUTERS Kinesis Logo and THOMSON REUTERS are trademarks of Thomson Reuters and
+                            its affiliated companies in the United States and other countries and used herein under
+                            license.</i>
                     </div>
-                    
+
 
                 </div>
             </div>
@@ -96,16 +112,7 @@
 
 
 <style>
-    .jumbotron {
-        background: #ffffff;
-        border: 1px solid #0886bd;
-    }
-
     #navigation {
         background: #ffff;
-    }
-
-    .card {
-        border: 1px solid #0886bd;
     }
 </style>
