--- a/src/views/competitions/discusion.hbs
+++ b/src/views/competitions/discusion.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="jumbotron m-4 p-0">
+    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
         <div class="container">
             <div class="mt-2">
                 <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
@@ -39,52 +39,49 @@
 </div>
 
 <div class="container">
-    <div class="card m-4">
-        <div class="card-header p-2">
-            <h5>General</h5>
+    <div class="card m-4" id="cardCompetition">
+        <div class="card-header p-2" id="desafiosActivos">
+            <h5>Discusión</h5>
+        </div>
+        <div id="navigation">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Recientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Más interesantes</a>
+                </li>
+                <li class="nav-item">
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                </li>
+            </ul>
         </div>
         <div class="card-body">
-            <div class="row">
-                <div class="col-md-3">
-                    <ul class="nav nav-tabs flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/competitions/theme1/general/description">Descripción</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/evaluation">Evaluación</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/prizes">Premios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/honorCode">Código de honor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/timeline">Cronograma</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/competitions/theme1/general/submission">Instrucciones de envío</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-9">
 
-                    <div class="text-center">
-                        <p>Can we use the content of news analytics to predict stock price performance? The ubiquity of data today enables investors at any scale to make better investment decisions. The challenge is ingesting and interpreting the data to determine which data is useful, finding the signal in this sea of information. Two Sigma is passionate about this challenge and is excited to share it with the Kaggle community.</p>
-                        <img src="/img/empresas/thumb76_76.png" alt="Imgen Empresa" class="rounded" width="200px">
-                        <p>As a scientifically driven investment manager, Two Sigma has been applying technology and data science to financial forecasts for over 17 years. Their pioneering advances in big data, AI, and machine learning have pushed the investment industry forward. Now, they're eager to engage with Kagglers in this continuing pursuit of innovation.</p>
-                        <p>By analyzing news data to predict stock prices, Kagglers have a unique opportunity to advance the state of research in understanding the predictive power of the news. This power, if harnessed, could help predict financial outcomes and generate significant economic impact all over the world.</p>
-                        <p>Data for this competition comes from the following sources:</p>
+            <div class="container">
+                <div class="media border p-3">
+                    <img src="/img/profile/img_avatar3.png" alt="John Doe" class="mr-3 mt-3 rounded-circle"
+                        style="width:60px;">
+                    <div class="media-body">
+                        <h4>John Doe <small><i>Posted on February 19, 2016</i></small></h4>
+                        <p id="parrafoCompetition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
+                        
+                        <div class="media p-3">
+                            <img src="/img/profile/img_avatar2.png" alt="Jane Doe" class="mr-3 mt-3 rounded-circle"
+                                style="width:45px;">
+                            <div class="media-body">
+                                <h4>Jane Doe <small><i>Posted on February 20 2016</i></small></h4>
+                                <p id="parrafoCompetition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                    do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua.</p>
+                               
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <ul>
-                            <li>Market data provided by Intrinio.</li>
-                            <li>News data provided by Thomson Reuters. Copyright Thomson Reuters, 2017. All Rights Reserved. Use, duplication, or sale of this service, or data contained herein, except as described in the Competition Rules, is strictly prohibited.</li>
-                        </ul>
-                        <i>The THOMSON REUTERS Kinesis Logo and THOMSON REUTERS are trademarks of Thomson Reuters and its affiliated companies in the United States and other countries and used herein under license.</i>
-                    </div>
-                    
-
                 </div>
             </div>
         </div>
@@ -94,16 +91,8 @@
 
 
 <style>
-    .jumbotron {
-        background: #ffffff;
-        border: 1px solid #0886bd;
-    }
-
     #navigation {
         background: #ffff;
     }
-
-    .card {
-        border: 1px solid #0886bd;
-    }
+    
 </style>
