Make update the best

--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -80,12 +80,12 @@
 
   #about h2 {
     font-family: "Raleway", Helvetica, Arial, sans-serif;
-    color: #0886bd;
+    color: #00bfa5;
   }
 
   #about .info i {
     font-size: 32px;
-    color: #0886bd;
+    color: #00bfa5;
     float: left;
   }
 
@@ -95,8 +95,8 @@
   }
 
   #about .form #sendmessage {
-    color: #0886bd;
-    border: 1px solid #0886bd;
+    color: #00bfa5;
+    border: 1px solid #00bfa5;
     display: none;
     text-align: center;
     padding: 15px;
@@ -139,7 +139,7 @@
     background: #fff;
     color: #0886bd;
     border: 0;
-    border: 1px solid #0886bd;
+    border: 1px solid #00bfa5;
     padding: 10px 24px;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
@@ -147,7 +147,7 @@
   }
 
   #about .form button[type="submit"]:hover {
-    background: #0886bd;
+    background: #00bfa5;
     color: #fff;
   }
 </style>
