Make update the best

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -11,7 +11,7 @@
           <label>ChallengeX</label>
         </div>
         <div id="description_card">
-          <small><span>Repositorio de problemáticas reales del <b>MUNDO</b></span></small>
+          <small><span>Repositorio de DESAFÍOS reales del <b>MUNDO</b></span></small>
         </div>
         <div class="card-body">
           <img src="img/computer.png" alt="computer" srcset="" width="100%" height="auto">
@@ -293,7 +293,7 @@
     <div class="row text-center">
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
-          <a href="#"><img alt="" class="team-img" src="img/team-1.png">
+          <a href="#"><img alt="" class="team-img" src="/img/team-1.png">
             <div class="card-title-wrap">
               <span class="card-title">John Mendoza</span> <span class="card-text">CEO-FOUNDER</span>
             </div>
@@ -320,7 +320,7 @@
 
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
-          <a href="#"><img alt="" class="team-img" src="img/team-2.png">
+          <a href="#"><img alt="" class="team-img" src="/img/team-2.png">
             <div class="card-title-wrap">
               <span class="card-title">John Mendoza</span> <span class="card-text">CEO-FOUNDER</span>
             </div>
@@ -347,7 +347,7 @@
 
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
-          <a href="#"><img alt="" class="team-img" src="img/team-3.png">
+          <a href="#"><img alt="" class="team-img" src="/img/team-3.png">
             <div class="card-title-wrap">
               <span class="card-title">John Mendoza</span> <span class="card-text">CEO-FOUNDER</span>
             </div>
@@ -374,7 +374,7 @@
 
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
-          <a href="#"><img alt="" class="team-img" src="img/team-4.png">
+          <a href="#"><img alt="" class="team-img" src="/img/team-4.png">
             <div class="card-title-wrap">
               <span class="card-title">John Mendoza</span> <span class="card-text">CEO-FOUNDER</span>
             </div>
