Make update the best

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -27,7 +27,8 @@
         <div id="description_card">
           <small><span>Si ha olvidado su <a href="#" style="color:#00bfa5"><b>Contraseña</b></a></span></small>
         </div>
-        <img class="mx-auto d-block logo m-4" src="/img/logoIndex.png" alt="Logo ChallengeX" width="150px" height="auto">
+        <img class="mx-auto d-block logo m-4" src="/img/logoIndex.png" alt="Logo ChallengeX" width="150px"
+          height="auto">
         <div class="card-body">
           <form action="/users/signin" method="POST">
             <div class="form-group">
@@ -79,8 +80,8 @@
                   autocomplete="off">
               </div>
               <div class="form-group">
-                <input type="email" id="campoForm" class="form-control" name="email" placeholder="Email*" value="{{email}}"
-                  autocomplete="off" id="campo"
+                <input type="email" id="campoForm" class="form-control" name="email" placeholder="Email*"
+                  value="{{email}}" autocomplete="off" id="campo"
                   onKeyUp="document.getElementById(this.id).value=document.getElementById(this.id).value.toLowerCase()">
               </div>
               <div class="form-group">
@@ -289,11 +290,11 @@
     <h2 class="text-center">
       Equipo
     </h2>
-
+    
     <div class="row text-center">
-     
-      </div>
+      <div class="col-sm-3 col-xs-6">
 
+      </div>
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
           <a href="#"><img alt="" class="team-img" src="/img/team-2.png">
