Make update the best

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -295,7 +295,7 @@
       <div class="col-sm-3 col-xs-6">
 
       </div>
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-sm-3 col-xs-6" id="cardCompetition">
         <div class="card card-block">
           <a href="#"><img alt="" class="team-img" src="/img/team-2.png">
             <div class="card-title-wrap">
@@ -322,7 +322,7 @@
         </div>
       </div>
 
-      <div class="col-sm-3 col-xs-6">
+      <div class="col-sm-3 col-xs-6" id="cardCompetition">
         <div class="card card-block">
           <a href="#"><img alt="" class="team-img" src="/img/team-3.png">
             <div class="card-title-wrap">
