Make update the best

--- a/src/views/competitions/general/description.hbs
+++ b/src/views/competitions/general/description.hbs
@@ -39,7 +39,7 @@
 </div>
 
 <div class="container">
-    <div class="card m-4">
+    <div class="card m-4" id="cardCompetition">
         <div class="card-header p-2" id="desafiosActivos">
             <h5>General</h5>
         </div>
