--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -20,13 +20,13 @@ p {
 
 #jumbotronCompetition {
     background: #ffffff;
-    border: 1px solid #00bfa5;
+    border: 1px solid #1de9b6;
 }
 
 #cardCompetition {
-    -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 191, 165, 1);
-    -moz-box-shadow: 0px 0px 0px 2px rgba(0, 191, 165, 1);
-    box-shadow: 0px 0px 0px 2px rgba(0, 191, 165, 1);
+    -webkit-box-shadow: 0px 0px 0px 2px rgba(29, 233, 182, 1);
+    -moz-box-shadow: 0px 0px 0px 2px rgba(29, 233, 182, 1);
+    box-shadow: 0px 0px 0px 2px rgba(29, 233, 182, 1);
 }
 
 #desafiosActivos {
