--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -290,7 +290,7 @@
     <h2 class="text-center">
       Equipo
     </h2>
-    
+
     <div class="row text-center">
       <div class="col-sm-3 col-xs-6">
 
@@ -308,10 +308,10 @@
               </h4>
 
               <nav class="social-nav">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <!--<a href="#"><i class="fa fa-envelope"></i></a>-->
+                <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/john-mendoza-ba297916a/" target="_blank"><i
+                    class="fa fa-linkedin"></i></a>
               </nav>
 
               <h5 id="leadSede">
@@ -335,14 +335,14 @@
               </h4>
 
               <nav class="social-nav">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <!--<a href="#"><i class="fa fa-envelope"></i></a>-->
+                <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/john-mendoza-ba297916a/" target="_blank"><i
+                    class="fa fa-linkedin"></i></a>
               </nav>
 
               <h5 id="leadSede">
-                Por un MUNDO mejor
+                Por un PERÚ mejor
               </h5>
             </div>
           </a>
