--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -14,7 +14,7 @@
           <small><span>Repositorio de DESAFÍOS reales del <b>MUNDO</b></span></small>
         </div>
         <div class="card-body">
-          <img src="img/computer.png" alt="computer" srcset="" width="100%" height="auto">
+          <img src="/img/computer.png" alt="computer" srcset="" width="100%" height="auto">
         </div>
         <h4>Contribuyendo al desarrollo de una sociedad más justa y equitativa</h4>
       </div>
