--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -21,6 +21,9 @@
               <a href="/desafios">Principal</a>
             </li>
             <li class="list-inline-item">
+              <a href="/contact">Contáctanos</a>
+            </li>
+            <li class="list-inline-item">
               <a href="/users/logout">Salir</a>
             </li>
             {{else}}
@@ -29,6 +32,9 @@
             </li>
             <li class="list-inline-item">
               <a href="/">Principal</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="/contact">Contáctanos</a>
             </li>
             {{/if}}
 
