--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2 class="section-title">Contáctanos la equipo ChallengeX</h2>
+        <h2 class="section-title">Contáctanos al equipo ChallengeX</h2>
       </div>
     </div>
 
