Make update the best

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -40,37 +40,15 @@
        
         <li><a href="#about">ChallengeX</a></li>
         <li><a href="#features">Pilares</a></li>
-        <!--<li><a href="#portfolio">Eventos</a></li>-->
         <li><a href="#team">Equipo</a></li>
-        <!--<li><a href="/contact">Contáctanos</a></li>-->
-       
-        <!--
-            <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-          -->
+        <li><a href="/">Login</a></li>
       </ul>
     </nav>
-    <!-- #nav-menu-container -->
 
+    <!-- #nav-menu-container -->
     <nav class="nav social-nav pull-right d-none d-lg-inline">
       <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="/">Login</a>
     </nav>
   </div>
 </header>
