--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -10,34 +10,33 @@
 
     <nav id="nav-menu-container">
       <ul class="nav-menu">
-        
+
         <li class="list-inline-item">
           <a href="/desafios">Retos globales</a>
         </li>
         <li class="list-inline-item">
           <a href="/notes">Notas</a>
         </li>
-        
-       
-        <!--
-            <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
+        <li class="menu-has-children"><a href="">{{user.name}}</a>
+          <ul>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="#">Competencias</a></li>
+            <!--
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-          -->
+              <ul>
+                <li><a href="#">Deep Drop Down 1</a></li>
+                <li><a href="#">Deep Drop Down 2</a></li>
+                <li><a href="#">Deep Drop Down 3</a></li>
+                <li><a href="#">Deep Drop Down 4</a></li>
+                <li><a href="#">Deep Drop Down 5</a></li>
+              </ul>
+            </li>
+            -->
+            <li><a href="#">Configuración</a></li>
+            <li><a href="/users/logout">Salir</a></li>
+            
+          </ul>
+        </li>
       </ul>
     </nav>
     <!-- #nav-menu-container -->
@@ -45,7 +44,6 @@
     <nav class="nav social-nav pull-right d-none d-lg-inline">
       <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="/users/logout">Salir</a>
 
     </nav>
   </div>
