Make update the best

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -254,7 +254,7 @@
             </h3>
 
             <p>
-              Realizamos evaluaciones integrales para dar con los mejores equipos y propuestas.
+              Realizamos evaluaciones con integridad para dar con los mejores equipos y propuestas.
             </p>
           </div>
         </div>
