--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -17,7 +17,7 @@
         <li class="list-inline-item">
           <a href="/notes">Notas</a>
         </li>
-        <li class="menu-has-children"><a href="">{{user.name}}</a>
+        <li class="menu-has-children"><a href="#">{{user.name}}</a>
           <ul>
             <li><a href="#">Perfil</a></li>
             <li><a href="#">Competencias</a></li>
